# agnostic-candles

./: README.md  docker-compose.yaml  markets.json
candles-server/: Cargo.toml  Dockerfile
candles-server/src/: error.rs  main.rs
candles-server/src/endpoints/: mod.rs
candles-server/src/endpoints/tradingview/: config.rs  history.rs  info.rs  mod.rs  pairs.rs  search.rs  symbols.rs  time.rs
candles-server/src/structs/: candles.rs  context.rs  mod.rs  raw_market.rs  tradingview.rs
candles-server/src/utils/: db.rs  markets.rs  mod.rs  parse_query.rs  regex.rs  time.rs
candles-worker/: Cargo.toml  Dockerfile
candles-worker/src/: error.rs  main.rs
candles-worker/src/aob/: fetch.rs
candles-worker/src/candles/: mod.rs
candles-worker/src/db/: db.rs  mod.rs
candles-worker/src/pyth/: fetch.rs
candles-worker/src/utils/: config.rs  markets.rs  math.rs  mod.rs  time.rs
